k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vio-vision-web
  namespace: vio-demo
  labels:
    app: vio-vision-web
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: vio-vision-web
